# add-evaluation-tool

./: .gitignore  .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  defaults.env  docker-compose.yml  otel-collector-config.yaml  prometheus.yml
.github/: README.md  pull_request_template.md
.github/workflows/: backend-ci.yml  ci-cd.yml  pages.yml
backend/: Dockerfile  Makefile  README.md  main.py  pyproject.toml  pytest.ini
backend/app/: __init__.py
backend/app/application/auth/: __init__.py  services.py
backend/app/application/diagrams/: matrix_service.py  ports.py  services.py
backend/app/application/nfr/: __init__.py  services.py
backend/app/application/system/: services.py
backend/app/core/: config.py  telemetry.py
backend/app/domain/auth/: __init__.py  entities.py  exceptions.py  repositories.py
backend/app/domain/diagrams/: entities.py  exceptions.py  matrix_repository.py  parsers.py  repositories.py
backend/app/domain/nfr/: __init__.py  entities.py  exceptions.py  repositories.py
backend/app/infrastructure/parsing/: plantuml_parser.py
backend/app/infrastructure/persistence/: database.py  in_memory.py  models.py  postgresql.py
backend/app/infrastructure/storage/: local.py
backend/app/presentation/api/: dependencies.py  routes.py
backend/app/presentation/api/v1/: router.py
backend/app/presentation/api/v1/endpoints/: auth.py  diagrams.py  health.py  nfrs.py
backend/app/presentation/api/v1/schemas/: __init__.py  auth.py  diagrams.py  matrix.py  nfrs.py
backend/demo_versions/: demo_v5.puml  demo_v6.puml  demo_v9.puml
backend/openapi/: README.md  openapi.json
backend/scripts/: check_module_coverage.py  init_db.py  test_qast202_1.py  test_qast302_1.py
backend/storage/diagrams/: 5abb0715-bca6-4974-9f2f-aa91ee653785.puml
backend/tests/: coverage-thresholds.json
backend/tests/application/diagrams/: test_matrix_service.py  test_services.py
backend/tests/application/nfr/: test_nfr_services.py
backend/tests/application/system/: test_health_service.py
backend/tests/domain/diagrams/: test_entities.py
backend/tests/infrastructure/parsing/: test_regex_parser.py
backend/tests/infrastructure/persistence/: test_in_memory_repository.py
demo_versions/: demo_v1.puml  demo_v10.puml  demo_v2.puml  demo_v3.puml  demo_v4.puml  demo_v7.puml  demo_v8.puml
docs/: ai-usage.md  analytics.md  beyla-integration.md  index.md  plan.md  telemetry-data.md
docs/.github-pages/: Gemfile  README.md  SETUP.md  _config.yml
docs/_includes/: custom-head.html
docs/api/: README.md  VIEWING.md  index.html  openapi.json
docs/architecture/: analytics.md  architecture.md  index.md  (+3 more)
frontend/: Dockerfile  Makefile  README.md  nginx.conf  pubspec.yaml  run.sh  verify-ci-setup.sh
scripts/: upload_demo_versions.sh
(+145 files in other folders)
