[tool.poetry]
name = "architecture-evaluation-tool-backend"
version = "0.1.0"
description = "Backend API for the Architecture Evaluation Tool"
authors = ["Architecture Evaluation Tool Team <team@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.104.1"
uvicorn = { version = "0.24.0", extras = ["standard"] }
pydantic = "2.5.0"
pydantic-settings = "2.1.0"
python-multipart = "0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.7"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"
