[tool.poetry]
name = "architecture-evaluation-tool-backend"
version = "0.1.0"
description = "Backend API for the Architecture Evaluation Tool"
authors = ["Architecture Evaluation Tool Team <team@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.104.1"
uvicorn = { version = "0.24.0", extras = ["standard"] }
pydantic = { version = "2.5.0", extras = ["email"] }
pydantic-settings = "2.1.0"
python-multipart = "0.0.6"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"
opentelemetry-instrumentation-fastapi = "^0.42b0"
opentelemetry-instrumentation-sqlalchemy = "^0.42b0"
opentelemetry-instrumentation-requests = "^0.42b0"
opentelemetry-exporter-otlp-proto-grpc = "^1.21.0"
opentelemetry-exporter-otlp-proto-http = "^1.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.7"
mypy = "^1.7.1"
pytest-cov = "^7.0.0"
requests = "^2.32.5"

[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"
